--- a/playbooks/roles/setup_snowflake/tasks/_snowflake-setup.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/_snowflake-setup.yaml
@@ -39,7 +39,8 @@
     dest: "/etc/systemd/system/{{ item.name }}.service"
   notify: Restart Snowflake
 
-- name: Enable {{ item.name }}
+- name: Enable and start {{ item.name }}
   ansible.builtin.systemd_service:
     name: "{{ item.name }}"
-    state: started
+    enabled: true
+  notify: Restart Snowflake
