--- a/playbooks/roles/setup_common/tasks/nginx.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx.yaml
@@ -69,7 +69,7 @@
     dest: "/etc/nginx/conf.d/{{ inventory_hostname }}.crt"
   notify: Reload nginx
 
-- name: Enable nginx
+- name: STart nginx
   ansible.builtin.systemd_service:
     name: nginx
     state: started
