--- a/playbooks/roles/setup_snowflake/tasks/_snowflake-remove.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/_snowflake-remove.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Disable {{ item.name }}
+- name: Disable and stop {{ item.name }}
   failed_when: false
   ansible.builtin.systemd_service:
     name: "{{ item.name }}"
