pid patternd do not need a *

--- a/playbooks/roles/setup_common/tasks/basetools-apt.yaml
+++ b/playbooks/roles/setup_common/tasks/basetools-apt.yaml
@@ -36,7 +36,7 @@
   retries: 3
   delay: 60
   community.general.pids:
-    pattern: apt.*|dpkg.*
+    pattern: apt|dpkg
   register: _processes
 
 - name: Install/Update tools
