--- a/playbooks/roles/setup_snowflake/handlers/main.yaml
+++ b/playbooks/roles/setup_snowflake/handlers/main.yaml
@@ -9,6 +9,7 @@
   ansible.builtin.systemd_service:
     name: "{{ item.name }}"
     state: restarted
+    enabled: true
   loop_control:
     label: "{{ item.name }}"
   loop: "{{ snowflake_proxies | selectattr('state', 'eq', 'present') }}"
