fix initial Tor stopped behaviour

--- a/playbooks/roles/setup_tor/handlers/main.yaml
+++ b/playbooks/roles/setup_tor/handlers/main.yaml
@@ -17,3 +17,11 @@
     name: tor
     state: reloaded
     enabled: true
+
+- name: Weird x86 issue
+  listen: Restart Tor
+  retries: 3
+  ansible.builtin.systemd_service:
+    name: tor
+    state: started
+    enabled: true
