--- a/playbooks/roles/setup_snowflake/tasks/_snowflake-setup.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/_snowflake-setup.yaml
@@ -37,7 +37,8 @@
   ansible.builtin.template:
     src: snowflake-proxy.service.j2
     dest: "/etc/systemd/system/{{ item.name }}.service"
-  notify: Restart Snowflake
+  notify:
+    - Restart Snowflake
 
 - name: Enable {{ item.name }}
   ansible.builtin.systemd_service:
