--- a/playbooks/roles/setup_common/tasks/basetools-apt.yaml
+++ b/playbooks/roles/setup_common/tasks/basetools-apt.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Configure Apt
+- name: Configure apt
   ansible.builtin.copy:
     src: 99local-apt-conf
     dest: /etc/apt/apt.conf.d/
