info: rename task _kernel-config to _config

--- a/playbooks/roles/info_healthy/tasks/_artefact.yaml
+++ b/playbooks/roles/info_healthy/tasks/_artefact.yaml
@@ -43,4 +43,4 @@
       ansible.builtin.include_tasks: _dmesg.yaml
 
     - name: Get kernel config for artefact
-      ansible.builtin.include_tasks: _kernel-config.yaml
+      ansible.builtin.include_tasks: _kconfig.yaml
