--- a/playbooks/roles/info_healthy/tasks/_minicoredumper.yaml
+++ b/playbooks/roles/info_healthy/tasks/_minicoredumper.yaml
@@ -46,4 +46,4 @@
       ansible.builtin.include_tasks: _dmesg.yaml
 
     - name: Get kernel config for coredump
-      ansible.builtin.include_tasks: _kernel-config.yaml
+      ansible.builtin.include_tasks: _kconfig.yaml
