--- a/playbooks/roles/info_healthy/tasks/_trace.yaml
+++ b/playbooks/roles/info_healthy/tasks/_trace.yaml
@@ -45,4 +45,4 @@
       ansible.builtin.include_tasks: _dmesg.yaml
 
     - name: Get kernel config for trace
-      ansible.builtin.include_tasks: _kernel-config.yaml
+      ansible.builtin.include_tasks: _kconfig.yaml
