--- a/playbooks/roles/info_healthy/tasks/coredump.yaml
+++ b/playbooks/roles/info_healthy/tasks/coredump.yaml
@@ -11,17 +11,12 @@
 - name: Result
   when: _result.files | default([]) | length > 0
   block:
-    - name: Bail out if there are too many (new) core dump files
-      ansible.builtin.assert:
-        quiet: true
-        that:
-          - "_result.files | length < 50"
-
     - name: Loop over core dump files
+      when: _result.files | length < 50
       vars:
         _fname: "{{ item.path }}"
         _unique_id: "{{ inventory_hostname }}.{{ _fname | dirname | basename }}"
-      ansible.builtin.include_tasks: _minicoredumper.yaml
+      ansible.builtin.include_tasks: _coredump.yaml
       loop_control:
         label: "{{ _unique_id }}"
       loop: "{{ _result.files }}"
