--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -41,7 +41,7 @@
     post_reboot_delay: 30
     test_command: "iptables -nvL"
 
-- name: Gather new kernel version after reboot
+- name: Gather new kernel version after common reboot
   listen: Reboot system
   ansible.builtin.setup:
     gather_subset:
