--- a/playbooks/roles/info_common/tasks/uname.yaml
+++ b/playbooks/roles/info_common/tasks/uname.yaml
@@ -14,5 +14,5 @@
       {{ ansible_facts.processor[1] }}
       {{ ansible_facts.distribution }}
       {{ ansible_facts.distribution_release }}
-    path: "{{ tmp_dir }}/uname"
+    path: "{{ infodir }}/uname"
     regexp: "^{{ inventory_hostname }} "
