--- a/playbooks/roles/info_snowflake/tasks/_systemd-time.yaml
+++ b/playbooks/roles/info_snowflake/tasks/_systemd-time.yaml
@@ -12,6 +12,6 @@
     _changetime: "{{ _service.status.StateChangeTimestamp | default('-') }}"
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} Start {{ _starttime }} Change {{ _changetime }}"
-    path: "{{ tmp_dir }}/{{ item.name }}_systemd_time"
+    path: "{{ infodir }}/{{ item.name }}_systemd_time"
     regexp: "^{{ inventory_hostname }} "
     state: "{{ (item.state == 'present' and _service.status) | ternary('present', 'absent') }}"
