--- a/playbooks/roles/info_common/tasks/conntrack.yaml
+++ b/playbooks/roles/info_common/tasks/conntrack.yaml
@@ -15,7 +15,7 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
-    path: "{{ tmp_dir }}/firewall_conntrack_drop"
+    path: "{{ infodir }}/firewall_conntrack_drop"
     regexp: "^{{ inventory_hostname }} "
 
 - name: Get conntrack counter
@@ -30,6 +30,6 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
-    path: "{{ tmp_dir }}/firewall_conntrack_counter"
+    path: "{{ infodir }}/firewall_conntrack_counter"
     regexp: "^{{ inventory_hostname }} "
     state: "{{ (_result.stderr | length > 0) | ternary('absent', 'present') }}"
