--- a/playbooks/roles/info_healthy/tasks/ipv6.yaml
+++ b/playbooks/roles/info_healthy/tasks/ipv6.yaml
@@ -9,7 +9,7 @@
       and ansible_facts.default_ipv6.address is not match('fe80::') }}"
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ ansible_facts.default_ipv6.address }}"
-    path: "{{ tmp_dir }}/ipv6"
+    path: "{{ infodir }}/ipv6"
     regexp: "^{{ inventory_hostname }} "
     state: "{{ _is_global | ternary('present', 'absent') }}"
   notify: Not Healthy
