--- a/playbooks/roles/info_tor/tasks/bto.yaml
+++ b/playbooks/roles/info_tor/tasks/bto.yaml
@@ -14,6 +14,6 @@
     _content: "{{ _uri.content | default('') }}"
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _content | split('\n') | select('match', '\\* ') | sort | reverse }}"
-    path: "{{ tmp_dir }}/tor_bto"
+    path: "{{ infodir }}/tor_bto"
     regexp: "^{{ inventory_hostname }} "
     state: "{{ _content | ternary('present', 'absent') }}"
