--- a/playbooks/roles/info_tor/tasks/ddos.yaml
+++ b/playbooks/roles/info_tor/tasks/ddos.yaml
@@ -6,7 +6,7 @@
   ansible.posix.synchronize:
     mode: pull
     src: "/var/tmp/tor-{{ item }}-{{ tor_port }}"
-    dest: "{{ tmp_dir }}/{{ item }}/{{ inventory_hostname }}"
+    dest: "{{ infodir }}/{{ item }}/{{ inventory_hostname }}"
     use_ssh_args: true
     verify_host: true
   with_items:
