--- a/playbooks/roles/info_tor/tasks/wellknown.yaml
+++ b/playbooks/roles/info_tor/tasks/wellknown.yaml
@@ -9,13 +9,13 @@
       delegate_to: localhost
       ansible.builtin.lineinfile:
         line: "# {{ inventory_hostname }}"
-        path: "{{ tmp_dir }}/hashed-bridge-rsa-fingerprint.txt"
+        path: "{{ infodir }}/hashed-bridge-rsa-fingerprint.txt"
 
     - name: Ensure hashed fingerprint is in wellknown file
       delegate_to: localhost
       ansible.builtin.lineinfile:
         line: "{{ _fingerprint_hashed }}"
-        path: "{{ tmp_dir }}/hashed-bridge-rsa-fingerprint.txt"
+        path: "{{ infodir }}/hashed-bridge-rsa-fingerprint.txt"
         insertafter: "^# {{ inventory_hostname }}\n"
 
 - name: Wellknown for server
@@ -26,7 +26,7 @@
       delegate_to: localhost
       ansible.builtin.lineinfile:
         line: "# {{ inventory_hostname }}"
-        path: "{{ tmp_dir }}/{{ item }}"
+        path: "{{ infodir }}/{{ item }}"
       loop:
         - "rsa-fingerprint.txt"
         - "ed25519-master-pubkey.txt"
@@ -35,12 +35,12 @@
       delegate_to: localhost
       ansible.builtin.lineinfile:
         line: "{{ _fingerprint }}"
-        path: "{{ tmp_dir }}/rsa-fingerprint.txt"
+        path: "{{ infodir }}/rsa-fingerprint.txt"
         insertafter: "^# {{ inventory_hostname }}\n"
 
     - name: Ensure ED25519 fingerprint is in wellknown file
       delegate_to: localhost
       ansible.builtin.lineinfile:
         line: "{{ _fingerprint_ed25519 }}"
-        path: "{{ tmp_dir }}/ed25519-master-pubkey.txt"
+        path: "{{ infodir }}/ed25519-master-pubkey.txt"
         insertafter: "^# {{ inventory_hostname }}\n"
