setup tor: optionally preload mimalloc

--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -28,3 +28,6 @@ tor_secret_family_key_file: ""
 torrc_config: []
 
 tor_keys_restore: false
+
+# https://www.1aeo.com/blog/tor-memory-optizations-what-actually-works.html
+tor_use_mimalloc: false
