--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -37,3 +37,23 @@
   ansible.builtin.template:
     src: logrotate.tor.j2
     dest: /etc/logrotate.d/tor
+
+# https://www.1aeo.com/blog/tor-memory-optizations-what-actually-works.html
+- name: Install/Update memory optimization
+  ansible.builtin.apt:
+    name:
+      - "{{ (ansible_facts.distribution_release == 'trixie') | ternary('libmimalloc3', 'libmimalloc2.0') }}"
+    state: "{{ (tor_use_mimalloc | bool) | ternary('present', 'absent') }}"
+  notify: Restart Tor
+
+- name: Ensure that Tor systemd override dir exists
+  ansible.builtin.file:
+    path: /etc/systemd/system/tor@default.service.d/
+    state: directory
+    mode: "0755"
+
+- name: Add Tor systemd override
+  ansible.builtin.template:
+    src: tor.override.conf.j2
+    dest: /etc/systemd/system/tor@default.service.d/override.conf
+  notify: Reload systemd
