--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -45,11 +45,11 @@
       tags:
         - tor-keys-restore
 
-    - name: Distribution
+    - name: Tor Debian
       when: not tor_build_from_source and ansible_facts.distribution == 'Debian'
-      ansible.builtin.import_tasks: tor-dist.yaml
+      ansible.builtin.import_tasks: tor-debian.yaml
       tags:
-        - tor-dist
+        - tor-debian
 
     - name: Build from source
       when: tor_build_from_source
